--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.11.11",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
