--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.11.11",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^3.0.0",
     "@prisma/client": "^4.9.0",
     "@radix-ui/react-label": "^2.0.1",
     "@tanstack/react-query": "^4.20.2",
@@ -25,6 +26,7 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.7",
     "superjson": "1.9.1",
     "zod": "^3.20.6",
     "zustand": "^4.3.6"
